chore: Add comprehensive README, update test counts, refine warning card config, and verify NSRC/PDRM endpoints
Add production-ready README.md with architecture overview, API documentation, deployment guides, and community resources. Update test counts from 155 to 188 across claude.md. Change `WARNING_CARD_RENDER_MODE` default from `svg` to `auto` in `.dev.vars.example` and document auto-fallback behavior in environment variables guide. Re-verify NSRC/PDRM live endpoints with detailed status checks and form

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -4,7 +4,7 @@
 APP_NAME="ScamShield MY"
 REGION="MY"
 PROVIDER_MODE="mock"
-WARNING_CARD_RENDER_MODE="svg"
+WARNING_CARD_RENDER_MODE="auto"
 
 # Comma-separated admin allowlist used during login promotion.
 ADMIN_EMAILS="admin@example.com"
