--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -11,7 +11,7 @@ head_sampling_rate = 0.2
 APP_NAME = "ScamShield MY"
 REGION = "MY"
 PROVIDER_MODE = "mock"
-WARNING_CARD_RENDER_MODE = "svg"
+WARNING_CARD_RENDER_MODE = "auto"
 GOOGLE_CLIENT_ID = "TODO_GOOGLE_CLIENT_ID"
 GOOGLE_REDIRECT_URI = "TODO_GOOGLE_REDIRECT_URI"
 BROWSER_RENDERING_ACCOUNT_ID = "TODO_CF_ACCOUNT_ID"
