feat: Add dual-mode landing page with inline AI chat, pre-navigation verdict flow, and intelligent fallback responses
Replace static hero with mode-toggle interface (AI Assistant/Manual Toolkit) with localStorage persistence. Implement inline AI chat component with streaming word-by-word typing animation, quick action buttons, markdown rendering, and conversation history. Add direct navigation from Landing to VerdictFlow with pre-loaded verdict state via React Router location state. Update Auth

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "wrangler dev src/index.ts --local",
-    "deploy": "wrangler deploy",
+    "deploy": "cd client && npm run build && cd .. && wrangler deploy",
     "lint": "eslint . --ext .ts,.js",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
