Ok. : Add structured JSON response format to AI chat with option-based navigation and cache-busting for auth redirects
Refactor AI system prompt to enforce JSON response structure with message text and 3 clickable options per response. Add JSON parsing with markdown code block extraction and fallback to policy enforcement. Update default chat model from gemini-2.5-flash to gemini-2.0-flash-exp:free. Add cache-busting query parameter and 'switch=1' flag to login URL to prevent stale edge/browser redirects.

--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -45,6 +45,7 @@ CRYPTOSCAMDB_API_BASE = "https://api.cryptoscamdb.org"
 directory = "./client/dist"    # React build output (was ./public)
 binding = "ASSETS"
 not_found_handling = "single-page-application"
+run_worker_first = ["/api/*"]
 
 # Replace all TODO_DEPLOY_* values before deploying.
 
